--- a/Tier1/Border-radius Previewer/index.html
+++ b/Tier1/Border-radius Previewer/index.html
@@ -10,6 +10,24 @@
 </head>
 
 <body>
+    <div>
+        <form id="border-radius">
+            <h1>Border Radius Input</h1>
+            <label for="top-left">Top-Left </label><input type="text" placeholder="Input Border Radius" name=""
+                id="top-left">
+            <label for="top-right">Top-Rigth </label><input type="text" placeholder="Input Border Radius" name=""
+                id="top-right">
+            <br><label for="bottom-left">Bottom-Left </label><input type="text" placeholder="Input Border Radius" name=""
+                id="bottom-left">
+            <label for="bottom-right">Bottom-Right </label><input type="text" placeholder="Input Border Radius" name=""
+                id="bottom-right">
+        </form>
+    </div>
+
+    <div>
+        HASIL
+    </div>
+
 
     <script src="js/app.js"></script>
 </body>
