--- a/Tier1/Border-radius Previewer/index.html
+++ b/Tier1/Border-radius Previewer/index.html
@@ -13,14 +13,17 @@
     <div>
         <form id="border-radius">
             <h1>Border Radius Input</h1>
-            <label for="top-left">Top-Left </label><input type="text" placeholder="Input Border Radius" name=""
-                id="top-left">
-            <label for="top-right">Top-Rigth </label><input type="text" placeholder="Input Border Radius" name=""
-                id="top-right">
-            <br><label for="bottom-left">Bottom-Left </label><input type="text" placeholder="Input Border Radius" name=""
-                id="bottom-left">
-            <label for="bottom-right">Bottom-Right </label><input type="text" placeholder="Input Border Radius" name=""
-                id="bottom-right">
+            <div>
+                <label for="top-left">Top-Left </label><input type="text" placeholder="Input Border Radius" name=""
+                    id="top-left">
+                <label for="top-right">Top-Right </label><input type="text" placeholder="Input Border Radius" name=""
+                    id="top-right">
+                <br><label for="bottom-left">Bottom-Left </label><input type="text" placeholder="Input Border Radius"
+                    name="" id="bottom-left">
+                <label for="bottom-right">Bottom-Right </label><input type="text" placeholder="Input Border Radius"
+                    name="" id="bottom-right">
+            </div>
+            <button type="submit">Border</button>
         </form>
     </div>
 
