--- a/Tier1/Border-radius Previewer/index.html
+++ b/Tier1/Border-radius Previewer/index.html
@@ -6,12 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Border-Radius Previewer</title>
-    <link rel="stylesheet" href="css/style.css">
+    
+
+    <style>
+        #myRec {
+            border: 1px solid black;
+            background: #73AD21;
+            padding: 20px;
+            width: 200px;
+            height: 150px;
+        }
+    </style>
 </head>
 
 <body>
     <div>
-        <form id="border-radius">
+        <form class="border-radius">
             <h1>Border Radius Input</h1>
             <div>
                 <label for="top-left">Top-Left </label><input type="text" placeholder="Input Border Radius" name=""
@@ -23,13 +33,12 @@
                 <label for="bottom-right">Bottom-Right </label><input type="text" placeholder="Input Border Radius"
                     name="" id="bottom-right">
             </div>
-            <button type="submit">Border</button>
+            <button onclick="borderRadius()">Border</button>
         </form>
     </div>
 
-    <div>
-        HASIL
-    </div>
+    <br>
+    <div id="myRec"></div>
 
 
     <script src="js/app.js"></script>
